# ai-learning-assistant-textbook

./: .gitignore  README.md  app.py  bilibili_subtitle_downloader.py  build.bat  build_exe.spec  build_package.ps1  define.py  download_and_summarize.py  export_db.py  insert_db.py  install_ffmpeg.ps1  llm_client.py  merge_excel_files.py  process_generated_content.py  process_video_info.py  pyproject.toml  requirements-gpu.txt  requirements.txt  run.bat  start_web.py  subtitle_summarizer.py  test_workspace_api.py  video_transcriber.py  模板.xlsx
config/: workspace.json
doc/: About dependence.md  launcher-dynamic-build.md
frontend/: README.md  bunfig.toml  example.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: example.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Alert.tsx  CookieConfig.tsx  CourseEditor.tsx  CourseLibraryManager.tsx  ModelConfig.tsx  ModelModal.tsx  TaskConfig.tsx  TaskList.tsx  WorkspaceConfig.tsx
frontend/src/types/: index.ts
templates/: example.json  index.html
templates/assets/: index-65AatYoe.css  index-9kfEBCAz.js  index-BBPie4Y_.css  index-BGCtE6IE.css  index-BH7F5jqA.js  index-BbxLzoiQ.js  index-BpSAIpHf.js  index-C-jwBKxR.js  index-C6Sz2dA_.css  index-CG46nR-O.css  index-CXFTEg7j.css  index-CbZw8O4b.css  index-ChWH_h4l.css  index-Cue97PDE.js  index-DI9EylTT.css  index-DQ55X0t3.js  index-Dh6V4JIh.js  index-pEQb-HDZ.js
