[project]
name = "ai-learning-assistant-textbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=0.10.0",
    "flask>=2.3.0",
    "modelscope>=1.11.0",
    "openpyxl>=3.1.5",
    "pyinstaller>=5.13.0",
    "requests>=2.31.0",
    "yt-dlp>=2023.12.30",
]

[project.optional-dependencies]
gpu = [
    "ctranslate2>=4.6.2",
    "onnxruntime-gpu",
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12"
]
