[project]
name = "ai-learning-assistant-textbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=0.10.0",
    "flask>=2.3.0",
    "modelscope>=1.11.0",
    "openpyxl>=3.1.5",
    "psycopg2-binary>=2.9.11",
    "pyinstaller>=5.13.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.45",
    "yt-dlp>=2023.12.30",
]

[project.optional-dependencies]
gpu = [
    "torch==2.4.0",
    "torchvision==0.19.0",      # 建议加上，如果用到
    "torchaudio==2.4.0",        # 建议加上，如果用到
    "ctranslate2>=4.6.2",
    "onnxruntime-gpu",
]


[[tool.uv.index]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]